--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url ('/swiper-bundle.css')
+@import url ('swiper-bundle.css')
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 * {
